crates/djls-python/tests/snapshots/corpus__repos__django-4.2__django__templatetags__l10n.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "django.templatetags.l10n::tag::localize":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities:
  "django.templatetags.l10n::filter::localize":
    expects_arg: false
    arg_optional: false
  "django.templatetags.l10n::filter::unlocalize":
    expects_arg: false
    arg_optional: false
block_specs:
  "django.templatetags.l10n::tag::localize":
    end_tag: endlocalize
    intermediates: []
    opaque: false
